--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Special+Elite&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  user-select: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --primaryFont: 'Special Elite', cursive;
+  --secondaryFont: 'Oswald', sans-serif;
+  --azul: #2c5da9;
+  --amarillo: #ebd42e;
+  --celeste: #73c5da;
+  --negro: #000000;
+  --blanco:  #fff;
+}
+
+a{
+  text-decoration: none;
+}
+
+#root{
+  min-height: 75vh;
+  position: relative;
+  background-color:rgba(255, 255, 255, 0.5);
+  background-image: url('./static/pincipitoOpaco.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-attachment: fixed;
+  background-position: center;
 }
