--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -7,3 +7,15 @@
     flex-wrap: wrap;
     font-family: var(--secondaryFont);
 }
+
+.form{
+    background-color: rgba(255, 255, 255, .95);
+    width: 30%;
+    min-width: 300px;
+    height: auto;
+    padding: 10px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
