--- a/src/pages/home/cards/Card.module.css
+++ b/src/pages/home/cards/Card.module.css
@@ -57,18 +57,30 @@
 
 .profile_card{
     display: flex;
+    position: relative;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 10px;
+    width: 250px;
+    height: 280px;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, .9);
+    -webkit-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 13px 0px rgba(0,0,0,0.75);
 }
 
-.profile_card img {
+.img {
     width: 80%;
 }
 
 .info {
-    width: 80%;
+    position: absolute;
+    background-color: white;
+    bottom: 0;
+    border-radius: 5px;
+    width: 100%;
     padding: 5px;
     display: flex;
     flex-direction: column;
