--- a/src/pages/home/containerimages/Container.css
+++ b/src/pages/home/containerimages/Container.css
@@ -1,8 +1,10 @@
-.swiper {
+.mySwiper {
     width: 100%;
-    height: 350px;
+    height: fit-content;
     padding: 10px;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   
