--- a/src/components/header/navbar/Navbar.module.css
+++ b/src/components/header/navbar/Navbar.module.css
@@ -5,7 +5,7 @@
     top:75px;
     left:0;
     width:100vw;
-    height: 75vh;
+    height: 50vh;
     background-color:var(--blanco);
     font-family: var(--primaryFont);
     font-weight: 600;
@@ -24,7 +24,20 @@
 .nav ul li{
     list-style: none;
     color: var(--azul);
-    font-size: 50px;
+    font-size: 35px;
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    transition: all .5s;
+}
+
+.nav ul li:hover{
+   border-radius: 5px;
+   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 }
 
 .buttonMenu{
