--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -1,11 +1,12 @@
 .main{
-    min-height: 75vh;
+    min-height: 78vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     font-family: var(--secondaryFont);
+    margin-top: 5px;
 }
 
 .form{
