--- a/src/pages/home/cards/Card.module.css
+++ b/src/pages/home/cards/Card.module.css
@@ -55,7 +55,8 @@
     font-size: 16px;
 }  */
 
-.profile_card{
+/*Segnuda opcion*/
+/* .profile_card{
     display: flex;
     position: relative;
     flex-direction: column;
@@ -91,3 +92,69 @@
 .info .name{
     font-size: 25px;
 }
+ */
+
+ .card{
+	width: 270px;
+	margin: 20px;
+	border-radius: 6px;
+	overflow: hidden;
+	background:#fff;
+	box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+	transition: all 400ms ease-out;
+	cursor: default;
+}
+.card:hover{
+	box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+	transform: translateY(-3%);
+}
+.card img{
+	width: 100%;
+	
+}
+.card .contenido_card{
+	padding: 15px;
+	text-align: center;
+}
+.card .contenido_card h3{
+	margin-bottom: 15px;
+	color: #7a7a7a;
+}
+.card .contenido_card .p{
+	line-height: 1.8;
+	color: #6a6a6a;
+	font-size: 14px;
+	margin-bottom: 5px;
+    text-align: center;
+    width: 100%;
+}
+.card .contenido_card a{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+	padding: 10px;
+	margin-top: 10px;
+	text-decoration: none;
+	color: #2fb4cc;
+	border: 1px solid #2fb4cc;
+	border-radius: 4px;
+	transition: all 400ms ease;
+	margin-bottom: 5px;
+}
+.card .contenido_card a i{
+    font-size: 25px;
+}
+.card .contenido_card a:hover{
+	background: #2fb4cc;
+	color: #fff;
+}
+@media only screen and (min-width:320px) and (max-width:768px){
+	.contenido_card{
+		flex-wrap: wrap;
+	}
+	.card{
+		margin: 15px;
+	}
+}
+/*Fin-Cards*/
